[package]
name = "sernty"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.3"
poise = "0.6.1"
env_logger = "0.11.5"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
features = ["cache", "framework", "standard_framework", "rustls_backend"]
version = "0.12.2"